--- a/app/src/main/res/layout/activity_game_win.xml
+++ b/app/src/main/res/layout/activity_game_win.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="146dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="159dp"
-        android:text="Vous avez gagné"
+        android:text="@string/win_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
@@ -25,7 +25,7 @@
         android:layout_marginStart="105dp"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="106dp"
-        android:text="Tableau des scores"
+        android:text="@string/scores_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
@@ -37,7 +37,7 @@
         android:layout_marginStart="11dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="167dp"
-        android:text="0"
+        android:text="@string/score_number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -49,7 +49,7 @@
         android:layout_marginStart="143dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="143dp"
-        android:text="Re-essayer"
+        android:text="@string/re_try_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -61,7 +61,7 @@
         android:layout_marginStart="146dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="12dp"
-        android:text="Votre score :"
+        android:text="@string/score_text"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -76,5 +76,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_undraw_relaunch_day_902d" />
+        app:srcCompat="@drawable/ic_undraw_relaunch_day_902d"
+        android:contentDescription="@string/image_los_win" />
 </androidx.constraintlayout.widget.ConstraintLayout>
