--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/ic_undraw_outer_space_re_u9vd" />
+        app:srcCompat="@drawable/ic_undraw_outer_space_re_u9vd"
+        android:contentDescription="@string/background_image_menu" />
 
     <TextView
         android:id="@+id/textView2"
@@ -23,7 +24,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="17dp"
         android:fontFamily="@font/aldrich"
-        android:text="DIM"
+        android:text="@string/title_text1"
         android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/aldrich"
-        android:text="SPACE"
+        android:text="@string/title_text2"
         android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:fontFamily="@font/aldrich"
-        android:text="TEAM"
+        android:text="@string/title_text3"
         android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +61,9 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="@string/name_user"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
@@ -73,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginBottom="48dp"
-        android:text="Démarrer"
+        android:text="@string/start_button"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -83,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="550dp"
         android:layout_marginEnd="100dp"
-        android:text="Créer un Astronaute"
+        android:text="@string/create_astro_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
