--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_undraw_relaunch_day_902d" />
+        app:srcCompat="@drawable/ic_undraw_relaunch_day_902d"
+        android:contentDescription="@string/image_loose_game" />
 
     <TextView
         android:id="@+id/textView"
@@ -24,7 +25,7 @@
         android:layout_marginStart="146dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="147dp"
-        android:text="Vous avez perdu ..."
+        android:text="@string/loose_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -37,7 +38,7 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="143dp"
         android:layout_marginBottom="28dp"
-        android:text="Re-essayer"
+        android:text="@string/retry_button"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         android:layout_marginTop="29dp"
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="116dp"
-        android:text="Tableau des scores"
+        android:text="@string/score_table_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="11dp"
         android:layout_marginBottom="27dp"
-        android:text="Votre score :"
+        android:text="@string/score_label"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toStartOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +80,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="167dp"
         android:layout_marginBottom="27dp"
-        android:text="0"
+        android:text="@string/score_user"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
