--- a/app/src/main/res/layout/in_room.xml
+++ b/app/src/main/res/layout/in_room.xml
@@ -10,65 +10,93 @@
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="178dp"
-        tools:srcCompat="@drawable/ic_undraw_maker_launch_re_rq81" />
+        android:layout_marginTop="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        tools:srcCompat="@drawable/ic_undraw_maker_launch_re_rq81"
+        android:contentDescription="@string/background_room_image" />
 
     <TextView
         android:id="@+id/room_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="31dp"
         android:fontFamily="@font/aldrich"
-        android:text="Mettez-vous prêt, lorsque tout le monde l'est, la partie se lancera"
+        android:text="@string/label_start_lobby"
         android:textAlignment="center"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Je suis prêt"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="104dp" />
+        android:layout_marginStart="138dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="139dp"
+        android:text="@string/ready_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/room_text2" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Socket actif"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="175dp" />
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="169dp"
+        android:layout_marginBottom="4dp"
+        android:text="@string/actif_socket_label"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintEnd_toStartOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/room_text2"
         app:srcCompat="@android:drawable/presence_online"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="179dp" />
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/avatar_image" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vous êtes dans le salon : "
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="225dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        android:text="@string/room_label"
+        app:layout_constraintEnd_toStartOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UwU"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="210dp"
+        android:text="@string/salon_name"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="212dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="380dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="320dp">
@@ -85,6 +113,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:layout_weight="1"
+                android:contentDescription="@string/avatar_image2"
+                tools:ignore="ImageContrastCheck"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
@@ -92,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Player1"
+                android:text="@string/player1_name"
                 android:textAlignment="center" />
 
             <TextView
@@ -100,7 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ready"
+                android:text="@string/ready_label_player1"
                 android:textAlignment="center" />
         </LinearLayout>
     </LinearLayout>
