--- a/app/src/main/res/layout/waiting_room.xml
+++ b/app/src/main/res/layout/waiting_room.xml
@@ -13,7 +13,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:srcCompat="@drawable/ic_undraw_maker_launch_re_rq81" />
+        tools:srcCompat="@drawable/ic_undraw_maker_launch_re_rq81"
+        android:contentDescription="@string/background_image_preroom" />
 
     <TextView
         android:id="@+id/room_text"
@@ -22,7 +23,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="31dp"
         android:fontFamily="@font/aldrich"
-        android:text="Entrer le nom d'une salle ou en créer une..."
+        android:text="@string/label_enter_room"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -37,7 +38,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="31dp"
         android:layout_marginEnd="100dp"
-        android:text="Rejoindre une partie"
+        android:text="@string/join_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/room_text" />
@@ -49,7 +50,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="163dp"
-        android:text="Socket inactif"
+        android:text="@string/socket_inactif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
@@ -64,6 +65,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/room_text"
-        app:srcCompat="@android:drawable/presence_offline" />
+        app:srcCompat="@android:drawable/presence_offline"
+        android:contentDescription="@string/socket_inactif_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
